; ModuleID = '/home/carl/AnghaBench/libgit2/tests/submodule/extr_submodule_helpers.c_setup_fixture_super.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/submodule/extr_submodule_helpers.c_setup_fixture_super.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"super\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"sub.git\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"super/sub\00", align 1
@cleanup_fixture_submodules = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @setup_fixture_super() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* @cl_git_sandbox_init(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  store i32* %2, i32** %1, align 8
  %3 = call i32 @cl_fixture_sandbox(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %4 = call i32 @p_mkdir(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i32 511)
  %5 = load i32*, i32** %1, align 8
  %6 = call i32 @git_repository_workdir(i32* %5)
  %7 = call i32 @rewrite_gitmodules(i32 %6)
  %8 = load i32, i32* @cleanup_fixture_submodules, align 4
  %9 = call i32 @cl_set_cleanup(i32 %8, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @git_repository_reinit_filesystem(i32* %10, i32 1)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = load i32*, i32** %1, align 8
  ret i32* %13
}

declare dso_local i32* @cl_git_sandbox_init(i8*) #1

declare dso_local i32 @cl_fixture_sandbox(i8*) #1

declare dso_local i32 @p_mkdir(i8*, i32) #1

declare dso_local i32 @rewrite_gitmodules(i32) #1

declare dso_local i32 @git_repository_workdir(i32*) #1

declare dso_local i32 @cl_set_cleanup(i32, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_reinit_filesystem(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
